--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -80,7 +80,7 @@
 
                 <div class="col-sm-2">
     <div class="team-member">
-        <img src="assets/img/xujun.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
+        <img src="assets/img/jun.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
         <h4><a href="https://gsai.ruc.edu.cn/~junxu">Jun Xu</a></h4>
         <p class="text-muted">Professor</p>
         <p class="text-muted">Renmin University of China</p>
