update_for_sigir

--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         
-        <div class="row">
+        <div class="row">*
 
             
             <div class="col-sm-2">
@@ -19,6 +19,7 @@
         <img src="assets/img/chen.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
         <h4><a href="https://xuchen0427.github.io/">Chen Xu</a></h4>
         <p class="text-muted">Ph.D Student</p>
+        <p class="text-muted">chenxu0427ruc@gmail.com</p>
         <p class="text-muted">Renmin University of China</p>
     </div>
 </div>
@@ -32,6 +33,7 @@
         <img src="assets/img/clara.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
         <h4><a href="https://scholar.google.com/citations?user=kytW95AAAAAJ&hl=en&oi=ao">Clara Rus</a></h4>
         <p class="text-muted">Ph.D Student</p>
+        <p class="text-muted">c.a.rus@uva.nl</p>
         <p class="text-muted">University of Amsterdam</p>
     </div>
 </div>
@@ -46,6 +48,7 @@
         <img src="assets/img/yuanna.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
         <h4><a href="https://scholar.google.com/citations?user=MGGTtO4AAAAJ&hl=en&oi=ao">Yuanna Liu</a></h4>
         <p class="text-muted">Ph.D Student</p>
+        <p class="text-muted">y.liu8@uva.nl</p>
         <p class="text-muted">University of Amsterdam</p>
     </div>
 </div>
@@ -69,6 +72,7 @@
         <img src="assets/img/marleen.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
         <h4><a href="https://scholar.google.com/citations?user=2ZYP8EkAAAAJ&hl=en&oi=ao">Marleen de Jonge</a></h4>
         <p class="text-muted">Ph.D Student</p>
+        <p class="text-muted">m.r.h.dejonge@uva.nl</p>
         <p class="text-muted">University of Amsterdam</p>
     </div>
 </div>
@@ -83,6 +87,7 @@
         <img src="assets/img/jun.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
         <h4><a href="https://gsai.ruc.edu.cn/~junxu">Jun Xu</a></h4>
         <p class="text-muted">Professor</p>
+        <p class="text-muted">junxu@ruc.edu.cn</p>
         <p class="text-muted">Renmin University of China</p>
     </div>
 </div>
@@ -98,6 +103,7 @@
         <img src="assets/img/maarten.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
         <h4><a href="https://staff.fnwi.uva.nl/m.derijke/">Maarten de Rijke</a></h4>
         <p class="text-muted">Distinguished Professor</p>
+         <p class="text-muted">m.derijke@uva.nl</p>
         <p class="text-muted">University of Amsterdam</p>
     </div>
 </div>
