--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -61,7 +61,7 @@
                 <div class="intro-location"> {{ site.conference_location }} </div>
                 <div class="intro-information"> {{ site.conference_venue }}</div>
                 {% if site.show_downloads %}
-                <a href="assets/files/proposal.pdf" class="btn-large">[SIGIR'25 Proposal TBD]</a>&nbsp;&nbsp;&nbsp;
+                <a href="assets/files/sigir_proposal.pdf" class="btn-large">[SIGIR'25 Proposal]</a>&nbsp;&nbsp;&nbsp;
                 <a href="https://github.com/XuChen0427/FairDiverse" class="btn-large">[Tookits]</a>
                 {% endif %}
             </div>
