--- a/_includes/tutorials.html
+++ b/_includes/tutorials.html
@@ -23,7 +23,7 @@
     <div class="row text-justify">
       <div class="col-md-12">
         <ul class="large text-muted">
-          <li>July, 2025: <b>Tutorial at SIGIR'25.</b> <a href='https://llm-ir-bias-fairness.github.io/'>[Slides TBD]</a>
+          <li>July, 2025: <b>Tutorial at SIGIR'25.</b> <a href='assets/files/_sigir25__tutorial_Fairness_From_Economics.pdf'>[Slides]</a>
         </ul>
       </div>
     </div>
